--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.10",
     "rxjs": "~6.3.3",
+    "webpack-dev-server": "^3.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -31,8 +32,8 @@
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.9.5",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^8.10.59",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -44,7 +45,7 @@
     "ng-packagr": "^4.2.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tsickle": ">=0.29.0",
+    "tsickle": "^0.37.1",
     "tslib": "^1.9.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1"
